--- a/assets/styles/base/_variables.scss
+++ b/assets/styles/base/_variables.scss
@@ -3,11 +3,11 @@ $medium: 600px;
 $large: 900px;
 
 // Typography
-$base-font-family: $font-stack-system;
+$base-font-family: 'proximanova', $font-stack-system;
 $heading-font-family: $base-font-family;
 
 // Font Sizes
-$base-font-size: 1em;
+$base-font-size: 1.063em;
 
 // Line height
 $base-line-height: 1.5;
@@ -17,7 +17,7 @@ $heading-line-height: 1.2;
 $base-border-radius: 3px;
 $base-spacing: $base-line-height * 1em;
 $small-spacing: $base-spacing / 2;
-$container-padding: $base-spacing;
+$container-padding: 3%;
 $base-z-index: 0;
 
 // Colors
