--- a/assets/styles/components/_interview.sass
+++ b/assets/styles/components/_interview.sass
@@ -2,7 +2,13 @@
   +clearfix
   background-color: #FFFFFF
 
-  .name
+  h1
+    -webkit-font-smoothing: antialiased
+    font-family: 'Varela Round', sans-serif
+    font-size: 35px
+    font-weight: 400
+
+  .name 
     font-weight: bold
 
   .left
@@ -11,3 +17,6 @@
 
   .right
     +span (5 of 12 last)
+    
+    img
+      display: block
