--- a/assets/styles/components/_sub-jumbotron.sass
+++ b/assets/styles/components/_sub-jumbotron.sass
@@ -3,3 +3,16 @@
   color: #FFFFFF
   background-color: #00C994
   text-align: center
+
+  p,
+  h2
+    max-width: 600px
+    display: block
+    margin-left: auto
+    margin-right: auto
+
+  h2
+    font-family: 'Merriweather', serif
+    font-size: 35px
+    font-weight: 400
+    -webkit-font-smoothing: antialiased
