--- a/assets/styles/views/_home.sass
+++ b/assets/styles/views/_home.sass
@@ -22,3 +22,9 @@
       +breakpoint($large)
         padding: $container-padding * 2
         +span(50%)
+
+  h1
+    font-family: 'Merriweather', serif
+    font-size: 2.2em
+    font-weight: 400
+    -webkit-font-smoothing: antialiased
