--- a/assets/styles/components/_jumbotron.sass
+++ b/assets/styles/components/_jumbotron.sass
@@ -5,9 +5,9 @@
   span
     color: #FFFFFF
     position: absolute
-    left: 20px
-    bottom: 20px
-    right: 20px
+    left: 3%
+    bottom: 3%
+    right: 3%
     font-family: 'Varela Round', sans-serif
     font-size: 2.3em
     -webkit-font-smoothing: antialiased
