--- a/assets/styles/components/_navigation.scss
+++ b/assets/styles/components/_navigation.scss
@@ -29,12 +29,23 @@
     img {
       max-height: $centered-navigation-height;
       opacity: 0.6;
-      padding: 0.8em 0;
+
+      @include breakpoint(max-width $medium) {
+        padding: 0.8em 0;
+      }
+
+      @include breakpoint($medium) {
+        margin-top: $base-spacing;
+      }
     }
 
     @include breakpoint($medium) {
       display: inline-block;
       float: none;
+    }
+
+    @include breakpoint(max-width $medium) {
+      max-width: 280px;
     }
   }
 
@@ -67,9 +78,12 @@
     position: relative;
     z-index: 999;
     text-align: center;
+    @include breakpoint($medium) {
+      padding-bottom: 10px;
+    }
   }
 
-  ul.centered-navigation-menu {
+  .centered-navigation-menu {
     clear: both;
     display: none;
     margin: 0 auto;
@@ -90,6 +104,12 @@
 
     ul {
       margin: 0;
+      padding-left: 0;
+      @include breakpoint($medium) {
+        margin-left: auto;
+        margin-right: auto;
+        display: inline-block;
+      }  
     }
   }
 
@@ -116,13 +136,10 @@
       display: inline-block;
       outline: none;
       text-decoration: none;
+      font-weight: 700;
 
       &:focus,
       &:hover {
-        color: $action-color;
-      }
-
-      &.current-menu-item {
         color: $action-color;
       }
     }
@@ -138,6 +155,16 @@
     }
   }
 
+  .centered-navigation-menu .nav > .menu-item:last-child a {
+    @extend .button;
+    padding: $small-spacing * 0.8 $base-spacing;
+  }
+
+  .current-menu-item a,
+  .current-menu-parent > a {
+    color: $action-color;
+  }
+
   // Sub menus
 
   li.menu-item-has-children {
@@ -149,10 +176,6 @@
 
     > ul > li:first-child a  {
       padding-top: 1em;
-    }
-
-    a {
-      margin-right: $centered-navigation-submenu-padding;
     }
 
     > a {
@@ -168,7 +191,6 @@
 
   li.menu-item-has-children {
     overflow: visible;
-    padding-right: 0;
 
     a {
       padding-right: $centered-navigation-submenu-padding;
@@ -178,15 +200,12 @@
       padding-right: 1.6em;
       position: relative;
 
-      @include breakpoint($large) {
-        margin-right: $centered-navigation-submenu-padding;
-      }
-
       &::after {
         content: "›";
         font-size: 1.2em;
         position: absolute;
         right: $centered-navigation-submenu-padding / 2;
+        transform: rotate(90deg);
       }
     }
 
