Add contact bg-video

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -18,6 +18,7 @@
 @import "components/tri-boxes";
 @import "components/sidebar-navigation";
 @import "components/interview";
+@import "components/video-section";
 
 @import "views/home";
 @import "views/template-services";
