Contact jumbo update

--- a/assets/styles/base/_variables.scss
+++ b/assets/styles/base/_variables.scss
@@ -22,6 +22,9 @@ $base-z-index: 0;
 
 // Colors
 $blue: #0076C1;
+$light-blue: #1E92C6;
+$turqouise: #1EB4C6;
+$green: #00C994;
 $dark-gray: #333;
 $medium-gray: #999;
 $light-gray: #ddd;
