--- a/assets/styles/components/_sub-jumbotron.sass
+++ b/assets/styles/components/_sub-jumbotron.sass
@@ -1,7 +1,7 @@
 .sub-jumbotron
   padding: $container-padding
   color: #FFFFFF
-  background-color: #00C994
+  background-color: $green
   text-align: center
 
   p,
