--- a/assets/styles/components/_tri-boxes.sass
+++ b/assets/styles/components/_tri-boxes.sass
@@ -33,12 +33,12 @@
 
   .first
     @extend %box
-    background-color: #0076C1
+    background-color: $blue
 
   .second
     @extend %box
-    background-color: #1E92C6
+    background-color: $light-blue
 
   .third
     @extend %box
-    background-color: #1EB4C6
+    background-color: $turqouise
