Update standard template

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -24,3 +24,4 @@
 @import "views/template-services";
 @import "views/template-contact";
 @import "views/template-pricing";
+@import "views/template-default";
