--- a/assets/styles/components/_jumbotron.sass
+++ b/assets/styles/components/_jumbotron.sass
@@ -35,13 +35,13 @@
     .right
       display: flex
       flex-direction: column
-      justify-content: flex-end
+      justify-content: center
       height: 70%
       background: $blue
       background-image: url('../images/big-heart.png')
       background-repeat: no-repeat
       background-size: 75%
-      background-position: center top $base-spacing
+      background-position: center 25%
       padding: $base-spacing*1.5 $base-spacing
       text-align: center
       color: white
