--- a/assets/styles/views/_template-default.sass
+++ b/assets/styles/views/_template-default.sass
@@ -1,5 +1,11 @@
 .page-template-default
 
+  h1
+    font-family: 'Merriweather', serif
+    font-size: 2.2em
+    font-weight: 400
+    -webkit-font-smoothing: antialiased
+
   main
     +container
     background-color: white
