--- a/assets/styles/views/_template-pricing.sass
+++ b/assets/styles/views/_template-pricing.sass
@@ -4,6 +4,15 @@
     margin-left: auto
     margin-right: auto
 
+  .name
+    font-family: "Varela Round"
+    font-size: 35px
+    font-weight: 400
+    margin-bottom: 5px
+    margin-left: 10px
+    -webkit-font-smoothing: antialiased
+    color: #000000
+
   .content
 
     table
@@ -13,7 +22,7 @@
       text-align: right
 
     section
-      border-bottom: 2px solid #969696
+      border-bottom: 1px solid #969696
       margin-top: $base-spacing
 
       &:last-child
