--- a/assets/styles/views/_template-services.sass
+++ b/assets/styles/views/_template-services.sass
@@ -1,12 +1,13 @@
 .page-template-template-services
   aside
     +breakpoint($medium)
-      +span(3 of 12)
+      +span(3 of 12 last)
 
   main
     +breakpoint($medium)
       +span(7 of 12)
-      +post(2 of 12 last)
+      +post(2 of 12)
+      float: right
 
   h1
     font-family: 'Merriweather', serif
