--- a/assets/styles/base/_variables.scss
+++ b/assets/styles/base/_variables.scss
@@ -1,6 +1,7 @@
 // Breakpoints
 $medium: 600px;
 $large: 900px;
+$large-height: min-height 820px;
 
 // Typography
 $base-font-family: 'proximanova', $font-stack-system;
