Video block fix

--- a/assets/styles/components/_video-section.sass
+++ b/assets/styles/components/_video-section.sass
@@ -3,7 +3,7 @@
   max-width: 100%
   overflow: hidden
 
-  .video-section-bg,
+  #video-section-bg,
   .video-section-bg-ios
     display: block
     width: 125%
