--- a/assets/styles/layouts/_pages.sass
+++ b/assets/styles/layouts/_pages.sass
@@ -4,4 +4,7 @@
 .content
   +clearfix
   background-color: #FFFFFF
-  padding: $container-padding
+  padding: $base-spacing $container-padding
+
+  +breakpoint($medium)
+    padding: $container-padding
