--- a/assets/styles/views/_template-services.sass
+++ b/assets/styles/views/_template-services.sass
@@ -1,13 +1,18 @@
 .page-template-template-services
   aside
     +breakpoint($medium)
+      +span(4 of 12 last)
+
+    +breakpoint($large)
       +span(3 of 12 last)
 
   main
     +breakpoint($medium)
+      +span(8 of 12)
+
+    +breakpoint($large)
       +span(7 of 12)
-      +post(2 of 12)
-      float: right
+      +push(2 of 12)
 
   h1
     font-family: 'Merriweather', serif
