--- a/assets/styles/components/_jumbotron.sass
+++ b/assets/styles/components/_jumbotron.sass
@@ -1,5 +1,6 @@
 $jumbotron-height: 420px
 $jumbotron-large-height: 470px
+$split-layout-image-height-mobile: 240px
 
 .jumbotron
   position: relative
@@ -23,13 +24,15 @@ $jumbotron-large-height: 470px
   &.split-layout
     display: flex
     flex-direction: column
+    height: auto
 
     +breakpoint($medium)
       flex-direction: row
+      height: $jumbotron-height
 
     .left
       display: flex
-      height: 30%
+      height: $split-layout-image-height-mobile
       background-size: cover
 
       +breakpoint($medium)
@@ -43,7 +46,6 @@ $jumbotron-large-height: 470px
       display: flex
       flex-direction: column
       justify-content: center
-      height: 70%
       background: $blue
       background-image: url('../images/big-heart.png')
       background-repeat: no-repeat
