--- a/assets/styles/components/_navigation.scss
+++ b/assets/styles/components/_navigation.scss
@@ -109,7 +109,7 @@
         margin-left: auto;
         margin-right: auto;
         display: inline-block;
-      }  
+      }
     }
   }
 
@@ -230,10 +230,19 @@
       top: 1.5em;
     }
 
-    .menu-item-has-children .sub-menu {
-      @include breakpoint($medium) {
-        left: $centered-navigation-submenu-width - 0.2em;
-        top: 0;
+    .menu-item-has-children {
+
+      > a:after {
+        @include breakpoint($medium) {
+          transform: rotate(0deg);
+        }
+      }
+
+      .sub-menu {
+        @include breakpoint($medium) {
+          left: $centered-navigation-submenu-width - 0.2em;
+          top: 0;
+        }
       }
     }
 
