--- a/assets/styles/views/_template-services.sass
+++ b/assets/styles/views/_template-services.sass
@@ -1,18 +1,18 @@
 .page-template-template-services
   aside
     +breakpoint($medium)
-      +span(4 of 12 last)
+      +span(4 of 12)
 
     +breakpoint($large)
-      +span(3 of 12 last)
+      +span(3 of 12)
 
   main
     +breakpoint($medium)
-      +span(8 of 12)
+      +span(8 of 12 last)
 
     +breakpoint($large)
-      +span(7 of 12)
-      +push(2 of 12)
+      +span(7 of 12 last)
+      +post(2 of 12)
 
   h1
     font-family: 'Merriweather', serif
