Fixed margins index

--- a/assets/styles/views/_home.sass
+++ b/assets/styles/views/_home.sass
@@ -17,7 +17,7 @@
       display: block
 
     .left
-      padding: $container-padding
+      padding: $base-spacing * 1.5 $container-padding
 
       +breakpoint($large)
         padding: $container-padding * 2
