Added modal and design fixes

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -19,6 +19,8 @@
 @import "components/sidebar-navigation";
 @import "components/interview";
 @import "components/video-section";
+@import "components/modal";
+@import "components/expander";
 
 @import "views/home";
 @import "views/template-services";
