--- a/assets/styles/base/_typography.scss
+++ b/assets/styles/base/_typography.scss
@@ -8,8 +8,11 @@ body {
 }
 
 h1,
+.h1,
 h2,
+.h2,
 h3,
+.h3,
 h4,
 h5,
 h6 {
@@ -19,11 +22,11 @@ h6 {
   margin: 0 0 $small-spacing;
 }
 
-h1 {
+h1, .h1 {
   margin-bottom: $small-spacing / 2;
 }
 
-p, ul, ol {
+p, ul, ol, figure {
   margin: 0 0 $small-spacing;
 }
 
@@ -33,7 +36,7 @@ a {
   transition: color $base-duration $base-timing;
 
   &:active,
-  &:focus,     
+  &:focus,
   &:hover {
     color: $action-color;
   }
