--- a/assets/styles/views/_template-pricing.sass
+++ b/assets/styles/views/_template-pricing.sass
@@ -4,6 +4,10 @@
     margin-left: auto
     margin-right: auto
 
+  .pricelist-file
+    margin-top: 1em
+    text-align: center
+
   .name
     font-family: "Varela Round"
     font-size: 35px
